Basic thread-list-item component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,8 @@
 <app-navbar></app-navbar>
-<div class="container-fluid angularit-container">
-  <div class="row">
-    <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container">
-      <div class="card">
-        <div class="card-body">
-          This is some text within a card body.
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          This is some text within a card body.
-        </div>
-      </div>
+<div class="container-fluid angularit-container h-100">
+  <div class="row h-100">
+    <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
+      <app-thread-list-item></app-thread-list-item>
     </div>
   </div>
 </div>
