--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -1,3 +1,14 @@
+@import 'variables';
+
 html, body {
   height: 100%;
+}
+
+/* Links */
+a {
+  color: $grey;
+  &:hover {
+    text-decoration: none;
+    color: $dark-grey
+  }
 }
