--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -12,3 +12,15 @@ a {
     color: $dark-grey
   }
 }
+
+/* Layout */
+.angularit-container {
+  .cards-container {
+    background-color: $lighter-grey;
+    // TODO make container scroll-able
+    // overflow-y: auto;
+    .card {
+      margin-top: 12px;
+    }
+  }
+}
