--- a/src/app/users/user-detail.component.html
+++ b/src/app/users/user-detail.component.html
@@ -10,7 +10,7 @@
       </p>
     </div>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
-      <app-comment *ngFor="let comment of comments" [model]="comment"></app-comment>
+      <app-thread-list-item *ngFor="let thread of threads" [model]="thread"></app-thread-list-item>
     </div>
   </div>
 </div>
