--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -4,10 +4,13 @@ nav.navbar {
   background-color: $grey;
   .navbar-brand {
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 700;
     color: $mint-green;
+    letter-spacing: 3px;
+    font-family: 'Monserrat', sans-serif;
     span {
       font-style: italic;
+      font-weight: bold;
     }
   }
 }
