--- a/src/app/threads/thread-detail.component.html
+++ b/src/app/threads/thread-detail.component.html
@@ -3,12 +3,16 @@
   <div class="row h-100">
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 thread-detail">
       <div class="votes-container float-right">
-        <button class="vote-btn" (click)="upvote()"><fa-icon icon="arrow-circle-up"></fa-icon></button> {{ model.upvotes || 0 }}
-        <button class="vote-btn" (click)="downvote()"><fa-icon icon="arrow-circle-down"></fa-icon></button> {{ model.downvotes || 0 }}
+        <button class="vote-btn" (click)="upvote()">
+          <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon>
+        </button> {{ model.upvotes || 0 }}
+        <button class="vote-btn" (click)="downvote()">
+          <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
+        </button> {{ model.downvotes || 0 }}
       </div>
       <h3>{{ model.thread_title }}</h3>
-      <a [routerLink]="'/users/' + model.user_id" class="d-block"><fa-icon icon="user-circle"></fa-icon> {{ model.user_name }}</a>
-      <p><fa-icon [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.</p>
+      <a [routerLink]="'/users/' + model.user_id" class="d-block"><fa-icon class="user-icon" icon="user-circle"></fa-icon> {{ model.user_name }}</a>
+      <p><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.</p>
       <p class="thread-body">{{ model.thread_body }}</p>
     </div>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
