--- a/src/app/users/user-detail.component.html
+++ b/src/app/users/user-detail.component.html
@@ -3,10 +3,10 @@
   <div class="row h-100">
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 user-detail">
       <h3>{{ model.user_name }}</h3>
-      <p><fa-icon icon="user-circle"></fa-icon> {{ model.registration_timestamp | timeDifference }}</p>
+      <p><fa-icon class="user-icon" icon="user-circle"></fa-icon> {{ model.registration_timestamp | timeDifference }}</p>
       <p>
-        <fa-icon icon="arrow-circle-up"></fa-icon> {{ model.upvotes }}
-        <fa-icon icon="arrow-circle-down"></fa-icon> {{ model.downvotes }}
+        <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon> {{ model.upvotes }}
+        <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon> {{ model.downvotes }}
       </p>
     </div>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
