--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,12 +1,12 @@
 @import 'variables';
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,700|Work+Sans');
 
 body {
-  font-family: 'Work Sans', sans-serif;
+  font-family: $main-font;
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: $title-font;
     color: $text-highlight;
+    font-weight: 400;
   }
 
   p, small {
