--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700|Work+Sans');
+
 /* Colors */
 $primary: #47DBBC;
 $secondary: #9F84BD;
@@ -8,3 +10,7 @@ $background-grey: #F7EBEC;
 
 $black: #000000;
 $white: #FFFFFF;
+
+/* Fonts */
+$main-font: 'Work Sans', sans-serif;
+$title-font: 'Montserrat', sans-serif;
