--- a/src/app/threads/thread-list-item/thread-list-item.component.html
+++ b/src/app/threads/thread-list-item/thread-list-item.component.html
@@ -3,8 +3,8 @@
     <small class="float-right">
       <fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.
     </small>
-    <a [routerLink]="'/threads/' + model.thread_id"><h4 class="card-title">Something Exciting!</h4></a>
-    <a [routerLink]="'/users/' + model.user_id" class="d-block"><fa-icon class="user-icon" icon="user-circle"></fa-icon>
+    <a class="card-title" [routerLink]="'/threads/' + model.thread_id">Something Exciting!</a>
+    <a [routerLink]="'/users/' + model.user_id" class="d-block user-link"><fa-icon class="user-icon" icon="user-circle"></fa-icon>
       {{ model.user_name }}</a>
     <div class="votes-container float-right">
       <button class="vote-btn" (click)="upvote()">
