--- a/src/app/comments/comment.component.html
+++ b/src/app/comments/comment.component.html
@@ -8,7 +8,8 @@
         <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
       </button> {{ model.downvotes || 0 }}
     </div>
-    <a [routerLink]="'/users/' + model.user_id" class="d-block"><fa-icon class="user-icon" icon="user-circle"></fa-icon> {{ model.user_name }}</a>
+    <fa-icon class="user-icon" icon="user-circle"></fa-icon>
+    <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
     <small class="d-block"><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> {{ model.timestamp | timeDifference }} ago</small>
     <p class="card-text">{{ model.comment_body }}</p>
   </div>
