--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,7 +6,7 @@ $secondary: #9F84BD;
 $highlight: #C2F970;
 $text-grey: #626868;
 $text-highlight: #484C4C;
-$background-grey: #F7EBEC;
+$background-grey: #E1D6D7;
 
 $black: #000000;
 $white: #FFFFFF;
