--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -9,7 +9,9 @@ a {
   color: $secondary;
   &:hover {
     color: $secondary;
-    text-decoration: none;
+  }
+  &.user-link {
+    margin-left: 5px;
   }
   &.card-title {
     font-size: 1.5rem !important;
@@ -19,6 +21,7 @@ a {
     color: $text-highlight;
     &:hover {
       color: $text-highlight;
+      text-decoration: underline $highlight;
     }
   }
 }
@@ -31,6 +34,7 @@ a {
     // overflow-y: auto;
     .card {
       margin-top: 12px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
   }
 }
