Fix height of containers

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -28,6 +28,7 @@ a {
 
 /* Layout */
 .angularit-container {
+  min-height: 100%;
   .cards-container {
     background-color: $background-grey;
     // TODO make container scroll-able
