--- a/src/app/threads/thread-detail.component.html
+++ b/src/app/threads/thread-detail.component.html
@@ -2,7 +2,8 @@
 <div class="container-fluid angularit-container h-100">
   <div class="row h-100">
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 thread-detail">
-      <div class="votes-container float-right">
+      <!-- web only -->
+      <div class="votes-container float-lg-right d-none d-lg-inline">
         <button class="vote-btn" (click)="upvote()">
           <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon>
         </button> {{ model.upvotes || 0 }}
@@ -10,11 +11,22 @@
           <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
         </button> {{ model.downvotes || 0 }}
       </div>
+
       <h3>{{ model.thread_title }}</h3>
       <fa-icon class="user-icon" icon="user-circle"></fa-icon>
       <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
       <p><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.</p>
       <p class="thread-body">{{ model.thread_body }}</p>
+
+      <!-- mobile only -->
+      <div class="votes-container d-lg-none">
+        <button class="vote-btn" (click)="upvote()">
+          <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon>
+        </button> {{ model.upvotes || 0 }}
+        <button class="vote-btn" (click)="downvote()">
+          <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
+        </button> {{ model.downvotes || 0 }}
+      </div>
     </div>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
       <app-comment *ngFor="let comment of model.comments" [model]="comment"></app-comment>
