Increase vote button size

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -42,6 +42,9 @@ a {
 
 
 /* Buttons */
+div.votes-container {
+  font-size: 1.1rem;
+}
 button.vote-btn {
   border: none;
   background-color: transparent;
