--- a/src/app/comments/comment.component.html
+++ b/src/app/comments/comment.component.html
@@ -1,13 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <div class="votes-container float-right">
-      <button class="vote-btn" (click)="upvote()">
-        <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon>
-      </button> {{ model.upvotes || 0 }}
-      <button class="vote-btn" (click)="downvote()">
-        <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
-      </button> {{ model.downvotes || 0 }}
-    </div>
+    <app-votes class="float-right" [model]="model"></app-votes>
     <fa-icon class="user-icon" icon="user-circle"></fa-icon>
     <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
     <small class="d-block"><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> {{ model.timestamp | timeDifference }} ago</small>
