--- a/src/app/threads/thread-detail.component.html
+++ b/src/app/threads/thread-detail.component.html
@@ -3,14 +3,7 @@
   <div class="row h-100">
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 thread-detail">
       <!-- web only -->
-      <div class="votes-container float-lg-right d-none d-lg-inline">
-        <button class="vote-btn" (click)="upvote()">
-          <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon>
-        </button> {{ model.upvotes || 0 }}
-        <button class="vote-btn" (click)="downvote()">
-          <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
-        </button> {{ model.downvotes || 0 }}
-      </div>
+      <app-votes class="float-lg-right d-none d-lg-inline" [model]="model"></app-votes>
 
       <h3>{{ model.thread_title }}</h3>
       <fa-icon class="user-icon" icon="user-circle"></fa-icon>
@@ -19,14 +12,7 @@
       <p class="thread-body">{{ model.thread_body }}</p>
 
       <!-- mobile only -->
-      <div class="votes-container d-lg-none">
-        <button class="vote-btn" (click)="upvote()">
-          <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon>
-        </button> {{ model.upvotes || 0 }}
-        <button class="vote-btn" (click)="downvote()">
-          <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
-        </button> {{ model.downvotes || 0 }}
-      </div>
+      <app-votes class="d-lg-none" [model]="model"></app-votes>
     </div>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
       <app-comment *ngFor="let comment of model.comments" [model]="comment"></app-comment>
