--- a/src/app/threads/thread-list-item/thread-list-item.component.html
+++ b/src/app/threads/thread-list-item/thread-list-item.component.html
@@ -10,14 +10,9 @@
     <a class="card-title d-block" [routerLink]="'/threads/' + model.thread_id">Something Exciting!</a>
     <fa-icon class="user-icon" icon="user-circle"></fa-icon>
     <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
-    <div class="votes-container float-right">
-      <button class="vote-btn" (click)="upvote()">
-        <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon>
-      </button> {{ model.upvotes || 0 }}
-      <button class="vote-btn" (click)="downvote()">
-        <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon>
-      </button> {{ model.downvotes || 0 }}
-    </div>
+
+    <app-votes class="float-right" [model]="model"></app-votes>
+
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
 </div>
