--- a/src/app/threads/thread-detail.component.html
+++ b/src/app/threads/thread-detail.component.html
@@ -3,7 +3,7 @@
   <div class="row h-100">
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 thread-detail">
       <!-- web only -->
-      <app-votes class="float-lg-right d-none d-lg-inline" [model]="model"></app-votes>
+      <app-votes class="float-lg-right d-none d-lg-inline" [model]="model" type="thread"></app-votes>
 
       <h3>{{ model.thread_title }}</h3>
       <fa-icon class="user-icon" icon="user-circle"></fa-icon>
