Add links for login and register to navbar

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -13,4 +13,10 @@ nav.navbar {
       font-weight: bold;
     }
   }
+  #navbarNav {
+    ul li a {
+      color: $highlight;
+      font-weight: 800;
+    }
+  }
 }
