--- a/src/app/threads/thread-detail.component.html
+++ b/src/app/threads/thread-detail.component.html
@@ -26,6 +26,7 @@
       </div>
     </ng-template>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
+      <app-comment *ngIf="isLoggedIn && !editing" [model]="addComment"></app-comment>
       <app-comment *ngFor="let comment of model.comments" [model]="comment"></app-comment>
     </div>
   </div>
