--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,2 +1,9 @@
 @import '../../styles/variables';
-
+.btn-positioner {
+  position: absolute;
+  right: 180px;
+}
+#add-thread-btn {
+  position: fixed;
+  bottom: 180px;
+}
