--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,5 @@
+// Import third-party styles
 @import "~bootstrap/dist/css/bootstrap.css";
+@import '~angular-notifier/styles.scss';
+
 @import '/styles/index';
