--- a/src/app/threads/thread-detail.component.html
+++ b/src/app/threads/thread-detail.component.html
@@ -1,33 +1,42 @@
 <app-navbar (loggedOut)="onLoggedOut()"></app-navbar>
-<div class="container-fluid angularit-container h-100">
+<div class="container-fluid angularit-container">
   <div class="row h-100">
-    <div *ngIf="!editing;else editThread" class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 thread-detail">
-      <!-- web only -->
-      <app-votes class="float-lg-right d-none d-lg-inline" [model]="model" type="thread"></app-votes>
-
-      <h3>{{ model.thread_title }}</h3>
-      <fa-icon class="user-icon" icon="user-circle"></fa-icon>
-      <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
-      <p><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.</p>
-      <p class="thread-body">{{ model.thread_body }}</p>
-      <button *ngIf="showActions" type="button" class="btn btn-primary mr-2" (click)="onEdit()">Edit</button>
-      <button *ngIf="showActions" type="button" class="btn btn-secondary" (click)="onDelete()">Delete</button>
-
-      <!-- mobile only -->
-      <app-votes class="d-lg-none" [model]="model"></app-votes>
-    </div>
-    <ng-template #editThread>
-      <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 thread-detail">
-
-        <form [formGroup]="form" (ngSubmit)="submit(data)">
-          <formly-form [form]="form" [fields]="fields" [model]="data">
-            <button type="button" (click)="onCancel()" class="btn btn-default mr-2">Cancel</button>
-            <button type="submit" [disabled]="!form.valid" class="btn btn-primary">Submit</button>
-          </formly-form>
-        </form>
-      </div>
-    </ng-template>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
+
+      <div class="card top-card" *ngIf="!editing;else editThread">
+        <div class="card-body">
+          <!-- web only -->
+          <app-votes class="float-lg-right d-none d-lg-inline" [model]="model" type="thread"></app-votes>
+
+          <h3>{{ model.thread_title }}</h3>
+          <fa-icon class="user-icon" icon="user-circle"></fa-icon>
+          <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
+          <p>
+            <fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon>
+            Posted {{ model.timestamp | timeDifference }} ago.
+          </p>
+          <p class="thread-body">{{ model.thread_body }}</p>
+          <button *ngIf="showActions" type="button" class="btn btn-primary mr-2" (click)="onEdit()">Edit</button>
+          <button *ngIf="showActions" type="button" class="btn btn-secondary" (click)="onDelete()">Delete</button>
+
+          <!-- mobile only -->
+          <app-votes class="d-lg-none" [model]="model"></app-votes>
+        </div>
+      </div>
+
+      <ng-template #editThread>
+        <div class="card top-card">
+          <div class="card-body">
+            <form [formGroup]="form" (ngSubmit)="submit(data)">
+              <formly-form [form]="form" [fields]="fields" [model]="data">
+                <button type="button" (click)="onCancel()" class="btn btn-default mr-2">Cancel</button>
+                <button type="submit" [disabled]="!form.valid" class="btn btn-primary">Submit</button>
+              </formly-form>
+            </form>
+          </div>
+        </div>
+      </ng-template>
+
       <app-comment *ngIf="isLoggedIn && !editing" [model]="addComment"></app-comment>
       <app-comment *ngFor="let comment of model.comments" [model]="comment"></app-comment>
     </div>
