--- a/src/app/threads/thread-list-item/thread-list-item.component.html
+++ b/src/app/threads/thread-list-item/thread-list-item.component.html
@@ -7,8 +7,10 @@
       <fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.
     </small>
     <a class="card-title d-block" [routerLink]="'/threads/' + model.thread_id">{{ model.thread_title }}</a>
-    <fa-icon class="user-icon" icon="user-circle"></fa-icon>
-    <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
+    <ng-container *ngIf="model.user_name">
+      <fa-icon class="user-icon" icon="user-circle"></fa-icon>
+      <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
+    </ng-container>
 
     <app-votes class="float-right" [model]="model" type="thread"></app-votes>
 
