--- a/src/app/users/user-detail.component.html
+++ b/src/app/users/user-detail.component.html
@@ -1,15 +1,26 @@
 <app-navbar (loggedOut)="onLoggedOut()"></app-navbar>
 <div class="container-fluid angularit-container h-100">
   <div class="row h-100">
-    <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 user-detail">
-      <h3>{{ model.user_name }}</h3>
-      <p><fa-icon class="user-icon" icon="user-circle"></fa-icon> {{ model.registration_timestamp | timeDifference }}</p>
-      <p>
-        <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon> {{ model.upvotes }}
-        <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon> {{ model.downvotes }}
-      </p>
-    </div>
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
+      <div class="card">
+        <div class="card-body top-card">
+          <h3>{{ model.user_name }}</h3>
+          <p><fa-icon class="user-icon" icon="user-circle"></fa-icon> User for {{ model.registration_timestamp | timeDifference }}</p>
+          <p><strong>Stats:</strong></p>
+          <p>They've given:
+            <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon> {{ model.upvotes }}
+            <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon> {{ model.downvotes }}
+          </p>
+          <p>Their posts have received:
+            <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon> {{ model.post_upvotes }}
+            <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon> {{ model.post_downvotes }}
+          </p>
+          <p>Their comments have received:
+            <fa-icon class="vote-icon" icon="arrow-circle-up"></fa-icon> {{ model.post_upvotes }}
+            <fa-icon class="vote-icon" icon="arrow-circle-down"></fa-icon> {{ model.post_downvotes }}
+          </p>
+        </div>
+      </div>
       <app-thread-list-item *ngFor="let thread of threads" [model]="thread"></app-thread-list-item>
     </div>
   </div>
