--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   <div [ngbCollapse]="isCollapsed" class="navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-lg-auto">
       <li>
-        <button class="d-none d-lg-inline btn btn-highlight mr-2" type="button" (click)="onAdd()">
+        <button class="d-none d-lg-inline btn btn-secondary mr-2" type="button" (click)="onAdd()">
           Create post
         </button>
       </li>
