--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700|Work+Sans');
 
 /* Colors */
-$primary: #47DBBC;
+$primary: #41C8AB;
 $secondary: #9F84BD;
 $highlight: #C2F970;
 $text-grey: #626868;
