--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -19,4 +19,9 @@ nav.navbar {
       font-weight: 800;
     }
   }
+  button.navbar-toggler {
+    &:focus,:active {
+      outline-color: rgba(0, 0, 0, 0.1) !important;
+    }
+  }
 }
