--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <button class="d-none d-lg-inline btn btn-secondary mr-2" type="button" (click)="onAdd()">
           Create post
         </button>
-        <a class="d-lg-none nav-item mr-2" (click)="onAdd()">
+        <a class="d-lg-none nav-link mr-2" (click)="onAdd()">
           Create post
         </a>
       </li>
