--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -31,6 +31,7 @@ a {
 
 /* Layout */
 .angularit-container {
+  padding-top: 20px;
   min-height: 100%;
   background-color: $background-grey;
   padding-bottom: 20px;
@@ -40,6 +41,7 @@ a {
   }
   .top-card {
     // TODO add different styling?
+    margin-bottom: 30px;
   }
 }
 
