Add more spacing between cards

--- a/src/app/users/user-detail.component.html
+++ b/src/app/users/user-detail.component.html
@@ -2,8 +2,8 @@
 <div class="container-fluid angularit-container">
   <div class="row h-100">
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
-      <div class="card">
-        <div class="card-body top-card">
+      <div class="card top-card">
+        <div class="card-body">
           <h3>{{ model.user_name }}</h3>
           <p><fa-icon class="user-icon" icon="user-circle"></fa-icon> User for {{ model.registration_timestamp | timeDifference }}</p>
           <p><strong>Stats:</strong></p>
