Move action buttons to right on forms

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -58,6 +58,10 @@ a {
   .btn-secondary {
     background-color: $secondary;
     border-color: $secondary;
+    font-weight: 700;
+    &:focus {
+      box-shadow: 0 0 0 2px $secondary;
+    }
   }
   .btn-highlight {
     background-color: $highlight;
