--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -8,10 +8,10 @@
     <ul class="navbar-nav ml-lg-auto">
       <li>
         <button class="d-none d-lg-inline btn btn-secondary mr-2" type="button" (click)="onAdd()">
-          Create post
+          <fa-icon icon="plus"></fa-icon> Create post
         </button>
         <a class="d-lg-none nav-link mr-2" (click)="onAdd()">
-          Create post
+          <fa-icon icon="plus"></fa-icon> Create post
         </a>
       </li>
       <li class="nav-item">
