Add ellipsis to thread_body in thread list items

--- a/src/app/threads/thread-list-item/thread-list-item.component.scss
+++ b/src/app/threads/thread-list-item/thread-list-item.component.scss
@@ -1,12 +1,15 @@
 .card {
   margin-top: 28px;
   .card-body {
-    h5 {
-      margin-bottom: 0.25rem;
-    }
     a {
       font-size: 80%;
       margin-bottom: 0.5rem;
+    }
+    p.card-text {
+      max-height: 80px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
