--- a/src/app/users/user-detail.component.html
+++ b/src/app/users/user-detail.component.html
@@ -1,4 +1,4 @@
-<app-navbar (loggedOut)="onLoggedOut()"></app-navbar>
+<app-navbar></app-navbar>
 <div class="container-fluid angularit-container">
   <div class="row h-100">
     <div class="col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 cards-container h-100">
