--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 // Import third-party styles
 @import "~bootstrap/dist/css/bootstrap.css";
 @import '~angular-notifier/styles.scss';
+@import '~quill/dist/quill.snow.css';
 
 @import '/styles/index';
