--- a/src/app/threads/thread-list-item/thread-list-item.component.html
+++ b/src/app/threads/thread-list-item/thread-list-item.component.html
@@ -14,6 +14,6 @@
 
     <app-votes class="float-right" [model]="model" type="thread"></app-votes>
 
-    <p class="card-text">{{ model.thread_body }}</p>
+    <p class="card-text" [innerHtml]="model.thread_body | safeHtml"></p>
   </div>
 </div>
