--- a/src/app/comments/comment.component.html
+++ b/src/app/comments/comment.component.html
@@ -4,7 +4,7 @@
     <fa-icon class="user-icon" icon="user-circle"></fa-icon>
     <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
     <small class="d-block"><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> {{ model.timestamp | timeDifference }} ago</small>
-    <p class="card-text">{{ model.comment_body }}</p>
+    <p class="card-text" [innerHtml]="model.comment_body | safeHtml"></p>
     <button *ngIf="showEdit" type="button" (click)="onEdit()" class="btn btn-primary float-right">
       <fa-icon icon="edit"></fa-icon> Edit
     </button>
