--- a/src/app/comments/comment.component.html
+++ b/src/app/comments/comment.component.html
@@ -15,7 +15,7 @@
 
 
 
-    <p class="card-text">{{ model.comment_body }}</p>
+    <p class="card-text" [innerHtml]="model.comment_body | safeHtml"></p>
     <button *ngIf="showEdit" type="button" (click)="onEdit()" class="btn btn-sm btn-primary float-right">
       <fa-icon icon="edit"></fa-icon> Edit
     </button>
