--- a/src/app/users/user-detail.component.scss
+++ b/src/app/users/user-detail.component.scss
@@ -2,4 +2,13 @@
 
 .user-detail {
   padding: 20px;
-  border: 2px solid $highlight;}
+  border: 2px solid $highlight;
+}
+.user-stats p {
+  margin-bottom: 4px;
+}
+
+.trophy-icon {
+  color: $primary;
+  margin-right: 5px;
+}
