--- a/src/app/users/user-detail.component.html
+++ b/src/app/users/user-detail.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid angularit-container">
   <div class="row h-100">
 
-    <div class="col-xl-3 offset-xl-3 col-lg-4 offset-lg-2 col-6">
+    <div class="col-xl-3 offset-xl-3 col-lg-4 offset-lg-2 col-md-6">
       <div class="card top-card">
         <div class="card-body">
           <h3>
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card d-none d-md-block">
         <div class="card-body">
           <h5>
             <fa-icon class="trophy-icon" icon="trophy"></fa-icon> {{ comments[0].comment_body }}
@@ -34,12 +34,12 @@
       </div>
 
       <ng-container *ngFor="let comment of comments; let i = index">
-        <app-comment *ngIf="i > 0 && i < 6" [model]="comment" [noEdit]="true"></app-comment>
+        <app-comment class="d-none d-md-inline" *ngIf="i > 0 && i < 6" [model]="comment" [noEdit]="true"></app-comment>
       </ng-container>
 
     </div>
 
-    <div class="col-xl-3 col-lg-4 col-6">
+    <div class="col-xl-3 col-lg-4 col-md-6">
       <div class="card top-card">
         <div class="card-body">
           <a class="card-title d-block" [routerLink]="'/threads/' + threads[0].thread_id">
